--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,13 @@ html {
 body {
     height: 100%;
     width: 100%;
-    background: linear-gradient(rgb(128, 7, 7) 0.0%, rgb(255, 50, 100) 100.0%);
+    background: linear-gradient(rgb(255, 255, 255) 0.0%, rgb(129, 217, 233) 100.0%);
     padding: 0px;
 }
 
 /* START TOP NAVIGATION */
-#top-navigation-container{
-    background-color: red;
-    height: 65px;
+.nav-item a{
+    font-size: 2em !important;
 }
 #logo{
     height: 65px;
