--- a/css/home.css
+++ b/css/home.css
@@ -2,8 +2,12 @@
     box-shadow: white;
     opacity: 1;
 }
-
 img {
+    max-width: 100%;
+    height: auto;
+}
+
+div > img {
     max-width: 100%;
     height: auto;
     pointer-events: none;
@@ -31,9 +35,10 @@ img {
     opacity: 0;
     pointer-events: none;
     animation-name: show;
-    animation-duration: 7000ms;
-    animation-iteration-count: infinite;
+    animation-duration: 4000ms;
+    animation-iteration-count: 1;
     animation-timing-function: linear;
+    animation-fill-mode: forwards;
 }
 
 @keyframes show{
