--- a/css/contact.css
+++ b/css/contact.css
@@ -1,8 +1,9 @@
 /* https://stackoverflow.com/questions/22196587/how-to-vertically-center-a-container-in-bootstrap */
-.vertical-center {
-    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-    min-height: 100vh; /* These two lines are counted as one :-)       */
+ /* .vertical-center {
+    min-height: 100%;  
+    min-height: 100vh;
   
     display: flex;
     align-items: center;
   }
+   */
